Feature: user-change-password
Description:

This feature involves a refactor for the User entity in general. Now, any user who possesses a role that extends from the User can change their password through the User controller in a unified manner.