@@ -10,12 +10,10 @@ import be.labofitness.labo_fitness.bll.service.service.SpecificationService;
 import be.labofitness.labo_fitness.bll.specification.ReportSpecification;
 import be.labofitness.labo_fitness.dal.repository.UserRepository;
 import be.labofitness.labo_fitness.domain.entity.Report;
-import be.labofitness.labo_fitness.domain.entity.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of the {@link ModeratorService} interface.
@@ -37,7 +35,7 @@ public class ModeratorServiceImpl implements ModeratorService {
      * @throws UnauthorizedException if invalid filtering criteria are provided
      */
     @Override
-    public ReportResponse moderatorGetReport(ReportRequest request) {
+    public List<ReportResponse> moderatorGetReport(ReportRequest request) {
         Specification<Report> spec = Specification.where(null);
 
         spec = specificationService.specificationHasAnyBoolean(spec, request.isApproved(), ReportSpecification::isApproved);
@@ -54,14 +52,7 @@ public class ModeratorServiceImpl implements ModeratorService {
                 specificationService.getIdByMail(request.complainantMail(), userRepository),
                 ReportSpecification::hasComplainant);
 
-        List<Report> reports =reportService.getReportsBySpecification(spec);
-        List<String> reportedUserEmail = reports.stream().map(Report::getReportedUser).map(User::getEmail).collect(Collectors.toList());
-        List<String> complainantUserEmail = reports.stream().map(Report::getComplainant).map(User::getEmail).collect(Collectors.toList());
-        List<String> description = reports.stream().map(Report::getDescription).collect(Collectors.toList());
-        List<Boolean> isApproved2 = reports.stream().map(Report::isApproved).collect(Collectors.toList());
-        List<Boolean> isConfirmed2 = reports.stream().map(Report::isConfirmed).collect(Collectors.toList());
-
-        return new ReportResponse(reportedUserEmail, complainantUserEmail, description, isApproved2, isConfirmed2);
+        return reportService.getReportsBySpecification(spec).stream().map(ReportResponse::fromEntity).toList();
     }
 
     /**
